--- a/maquetacion/angular.json
+++ b/maquetacion/angular.json
@@ -24,7 +24,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/theme/_theme.scss"],
+            "styles": ["src/styles.scss", "src/theme/_theme.scss"],
             "scripts": []
           },
           "configurations": {
@@ -79,7 +79,7 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/theme/_theme.scss"],
+            "styles": ["src/theme/_theme.scss", "src/styles.scss"],
             "scripts": []
           }
         }
