--- a/maquetacion/angular.json
+++ b/maquetacion/angular.json
@@ -25,8 +25,9 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "node_modules/@sinco/angular/src/lib/styles/_main.scss",
               "src/styles.scss",
-              "src/theme/_theme.scss"
+              "src/theme/_theme.scss",
             ],
             "scripts": []
           },
