--- a/maquetacion/angular.json
+++ b/maquetacion/angular.json
@@ -26,6 +26,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.scss",
+              "node_modules/@sinco/angular/src/lib/styles/_main.scss",
               "src/theme/_theme.scss"
             ],
             "scripts": []
@@ -82,10 +83,7 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "src/theme/_theme.scss",
-              "src/styles.scss"
-            ],
+            "styles": ["src/theme/_theme.scss", "src/styles.scss"],
             "scripts": []
           }
         }
