--- a/maquetacion/package.json
+++ b/maquetacion/package.json
@@ -16,11 +16,11 @@
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
     "@angular/forms": "^15.1.0",
-    "@angular/material": "^15.1.5",
+    "@angular/material": "^15.2.0",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
-    "@sinco/angular": "^1.1.2-rc.9",
+    "@sinco/angular": "^1.1.1-rc.61",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -37,5 +37,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.9.4"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 15.1.6.",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
